--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.3",
+    "@types/reach__router": "^1.2.4",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "date-fns": "^2.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-hook-form": "^3.23.0",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
-    "typescript": "3.6.2"
+    "redux": "^4.0.4",
+    "redux-persist": "^5.10.0",
+    "typescript": "3.6.2",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.2",
+    "@types/uuid": "^3.4.5"
   }
 }
