--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.16",
+    "@emotion/styled": "^10.0.15",
     "@reach/router": "^1.2.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.3",
     "@types/reach__router": "^1.2.4",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/styled-system": "^5.1.1",
+    "@types/styled-system__css": "^5.0.4",
     "date-fns": "^2.0.1",
+    "emotion-theming": "^10.0.14",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-hook-form": "^3.23.0",
@@ -17,6 +22,7 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-persist": "^5.10.0",
+    "styled-system": "^5.1.1",
     "typescript": "3.6.2",
     "uuid": "^3.3.3"
   },
