Update icons and register serviceworker

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Film Log",
-  "name": "Film Log",
+  "short_name": "Film log",
+  "name": "Film log",
   "icons": [
     {
       "src": "favicon.ico",
